Prevent content from being wrapped.

--- a/src/FileUploadDemo.css
+++ b/src/FileUploadDemo.css
@@ -12,6 +12,7 @@ body {
   border: solid 1px gray;
   border-radius: 4px 4px 4px 4px;
   padding: 12px 5px 5px 5px;
+  white-space: nowrap;
   background-color: SkyBlue;
 }
 
